# applied_ml

./: .gitignore  main.py  pyproject.toml
notebooks/: 01-initial-data-exploration.ipynb  01-mzg-initial-data-exploration.ipynb
notebooks/mzg/: 01-mzg-initial-data-exploration.ipynb  02-mzg-player-profiling.ipynb  02-mzg-player-profiling_under_one.ipynb  mzg-final.ipynb
src/: config.py  dataset.py  poker_parser.py  preprocessing.py
src/dataset/: __init__.py  process.py  tasks.py
src/modeling/: predict.py  train.py
src/preprocessing/: __init__.py  process.py  tasks.py
