[project]
name = "applied-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas>=2.0.0",
    "scikit-learn>=1.8.0",
    "pyarrow>=11.0.0",
    "huggingface-hub>=0.20.0",
]
